added tetris project

--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
     <body>
         <div class="container">
             <div class="scrlBlck LandingBlock center">
-                <h1>i am Ayoub Aarkoub.</h1>
+                <h1>Ayoub Aarkoub.</h1>
+                <h2>Software Developer</h2>
             </div>
             <div class="scrlBlck block block-1">
                 <h1 id="ProjectsTitle">Projects.</h1>
-                <h1>Multiplayer Tetris.</h1>
-                <h2>Hogeschool Utrecht</h2>
+                <h1>Multiplayer Tetris game.</h1>
+                <h2>C#</h2>
             </div>
                 <div class="scrlBlck block block-2">
-                    <h1>Multiplayer Tetris.</h1>
-                    <h2>Hogeschool Utrecht</h2>
+                    <h1>hi.</h1>
+                    <h2>...</h2>
                 </div>
             <div class="scrlBlck block block-3">
-                <h1>Multiplayer Tetris.</h1>
-                <h2>Hogeschool Utrecht</h2>
+                <h1>:).</h1>
+                <h2>...</h2>
             </div>
             <div class="scrlBlck block block-4">
-                <h1>Multiplayer Tetris.</h1>
-                <h2>Hogeschool Utrecht</h2>
+                <h1>>:(.</h1>
+                <h2>...</h2>
             </div>
         </div>
         <script src="scrolling.js"></script>
