--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2>Software Developer</h2>
             </div>
             <div class="scrlBlck block block-1">
-                <h1 id="ProjectsTitle">Projects.</h1>
+                <h1 id="ProjectsTitle">Some of my projects.</h1>
                 <h1>Multiplayer Tetris game.</h1>
                 <h2>C#</h2>
             </div>
