--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <h2>C#</h2>
             </div>
                 <div class="scrlBlck block block-2">
-                    <h1>hi.</h1>
-                    <h2>...</h2>
+                    <h1>Interactive Steamdashboard.</h1>
+                    <h2>Python</h2>
                 </div>
             <div class="scrlBlck block block-3">
                 <h1>:).</h1>
