--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
             </div>
             <div class="scrlBlck block block-1">
                 <h1 id="ProjectsTitle">Some of my projects.</h1>
-                <h1>Multiplayer Tetris game.</h1>
-                <h2>C#</h2>
+                <a href="#">
+                    <h1>Multiplayer Tetris game.</h1>
+                    <h2>C#</h2>
+                </a>
             </div>
                 <div class="scrlBlck block block-2">
-                    <h1>Interactive Steamdashboard.</h1>
-                    <h2>Python</h2>
+                    <a href="#">
+                        <h1>Interactive Steamdashboard.</h1>
+                        <h2>Python</h2>
+                    </a>
                 </div>
             <div class="scrlBlck block block-3">
-                <h1>:).</h1>
-                <h2>...</h2>
+                <a href="#">
+                    <h1>Interactive Steamdashboard.</h1>
+                    <h2>Python</h2>
+                </a>
             </div>
             <div class="scrlBlck block block-4">
-                <h1>>:(.</h1>
-                <h2>...</h2>
+                <a href="#">
+                    <h1>Interactive Steamdashboard.</h1>
+                    <h2>Python</h2>
+                </a>
             </div>
         </div>
-        <script src="scrolling.js"></script>
-        <script>
-            var blocks = document.getElementsByClassName("scrlBlck");
-            var container = document.getElementsByClassName("container");
-            var hs = new HorizontalScroll.default({
-                blocks: blocks,
-                container: container,
-                isAnimated: true,
-                springEffect: 0.5,
-            });
-        </script>
+        <script src="scrollingPlug.js"></script>
+        <script src="scroll.js"></script>
     </body>
 </html>
