--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             </div>
             <div class="scrlBlck block block-1">
                 <h1 id="ProjectsTitle">Some of my projects.</h1>
-                <a href="#">
-                    <h1>Multiplayer Tetris game.</h1>
-                    <h2>C#</h2>
+                <a target="_blank" href="https://www.google.com/">
+                    <img class="githubSvg" src="resources/github.svg" alt="link to github repository"/>
                 </a>
+                <h1>Multiplayer Tetris game.</h1>
+                <h2>C#</h2>
             </div>
                 <div class="scrlBlck block block-2">
                     <a href="#">
@@ -42,5 +43,21 @@
         </div>
         <script src="scrollingPlug.js"></script>
         <script src="scroll.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
+        <script>
+            VANTA.TOPOLOGY({
+                el: "body",
+                mouseControls: true,
+                touchControls: true,
+                gyroControls: false,
+                minHeight: 200.00,
+                minWidth: 200.00,
+                scale: 1.00,
+                scaleMobile: 1.00,
+                color: 0xE4572E,
+                backgroundColor: 0x191923
+            })
+        </script>
     </body>
 </html>
