--- a/index.html
+++ b/index.html
@@ -20,25 +20,28 @@
                     <img class="githubSvg" src="resources/github.svg" alt="link to github repository"/>
                 </a>
                 <h1>Multiplayer Tetris game.</h1>
-                <h2>C#</h2>
+                <h2>[ C#, .NET ]</h2>
             </div>
                 <div class="scrlBlck block block-2">
-                    <a href="#">
-                        <h1>Interactive Steamdashboard.</h1>
-                        <h2>Python</h2>
+                    <a target="_blank" href="https://github.com/Ayoub2K/ProjectSteam">
+                        <img class="githubSvg" src="resources/github.svg" alt="link to github repository"/>
                     </a>
+                    <h1>Interactive Steamdashboard.</h1>
+                    <h2>[ Python, Tkinter, RaspberryPi ]</h2>
                 </div>
             <div class="scrlBlck block block-3">
-                <a href="#">
-                    <h1>Interactive Steamdashboard.</h1>
-                    <h2>Python</h2>
+                <a target="_blank" href="https://www.google.com/">
+                    <img class="githubSvg" src="resources/github.svg" alt="link to github repository"/>
                 </a>
+                <h1>Interactive Steamdashboard.</h1>
+                <h2>[ Python, Tkinter, RaspberryPi ]</h2>
             </div>
             <div class="scrlBlck block block-4">
-                <a href="#">
-                    <h1>Interactive Steamdashboard.</h1>
-                    <h2>Python</h2>
+                <a target="_blank" href="https://www.google.com/">
+                    <img class="githubSvg" src="resources/github.svg" alt="link to github repository"/>
                 </a>
+                <h1>Interactive Steamdashboard.</h1>
+                <h2>[ Python, Tkinter, RaspberryPi ]</h2>
             </div>
         </div>
         <script src="scrollingPlug.js"></script>
