added lingo api

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <h2>[ Java, Vue.js, Umami ]</h2>
             </div>
             <div class="scrlBlck block block-4">
-                <a target="_blank" href="https://www.google.com/">
-                    <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>
-                </a>
-                <h1>Interactive Steamdashboard.</h1>
-                <h2>[ Java, Vue, Umami ]</h2>
+<!--                <a target="_blank" href="https://www.google.com/">-->
+<!--                    <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>-->
+<!--                </a>-->
+                <h1>Lingo API.</h1>
+                <h2>[ Java, Restfull, Gherkin ]</h2>
             </div>
         </div>
         <script src="js/scrollingPlug.js"></script>
