--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="scrlBlck block block-1">
                 <h1 id="ProjectsTitle">Some of my projects.</h1>
-                <a target="_blank" href="https://www.google.com/">
+                <a target="_blank" href="https://github.com/huict/practicum-5-v2-sir-this-is-a-wendy-s">
                     <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>
                 </a>
                 <h1>Multiplayer Tetris game.</h1>
