--- a/index.html
+++ b/index.html
@@ -9,45 +9,6 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div class="container">
-            <div class="scrlBlck LandingBlock center">
-                <h1>Ayoub Aarkoub.</h1>
-                <h2>Software Developer</h2>
-            </div>
-            <div class="scrlBlck block block-1">
-                <h1 id="ProjectsTitle">Some of my projects.</h1>
-                <a target="_blank" href="https://github.com/Ayoub2K/Tetris-Multiplayer">
-                    <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>
-                </a>
-                <h1>Multiplayer Tetris game.</h1>
-                <h2>[ C#, .NET ]</h2>
-            </div>
-                <div class="scrlBlck block block-2">
-                    <a target="_blank" href="https://github.com/Ayoub2K/ProjectSteam">
-                        <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>
-                    </a>
-                    <h1>Interactive Steamdashboard.</h1>
-                    <h2>[ Python, Tkinter, RaspberryPi ]</h2>
-                </div>
-            <div class="scrlBlck block block-3">
-                <a target="_blank" href="/files/Elisabeth_Tweesteden_Ziekenhuis_Dashboard.pdf">
-                    <img class="repoSvg" src="resources/pdf.svg" alt="link to github repository"/>
-                </a>
-                <h1>Patientendashboard ETZ</h1>
-                <h2>[ Java, Vue.js, Umami ]</h2>
-            </div>
-            <div class="scrlBlck block block-4">
-<!--                <a target="_blank" href="https://www.google.com/">-->
-<!--                    <img class="repoSvg" src="resources/github.svg" alt="link to github repository"/>-->
-<!--                </a>-->
-                <h1>Lingo API.</h1>
-                <h2>[ Java, Restfull, Gherkin ]</h2>
-            </div>
-        </div>
-        <script src="js/scrollingPlug.js"></script>
-        <script src="js/scroll.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
-        <script src="js/bgScript.js"></script>
+        this page is under construction, come back soon!
     </body>
 </html>
