--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        This page is under construction, come back soon!
+        This page is under construction, come back soon! 😀
     </body>
 </html>
